# taws

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  event.rs  main.rs
src/aws/: credentials.rs
src/resource/: mod.rs  sdk_dispatch.rs
src/resources/: cloudwatch.json
src/ui/: help.rs  mod.rs
