[package]
name = "taws"
version = "0.1.0"
edition = "2021"

[dependencies]
# TUI
ratatui = "0.30"
crossterm = "0.28"

# AWS SDK
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1.92"
aws-sdk-iam = "1.51"
aws-sdk-s3 = "1.65"
aws-sdk-lambda = "1.82"
aws-sdk-rds = "1.104"
aws-sdk-dynamodb = "1.70"
aws-sdk-ecs = "1.77"
aws-sdk-cloudwatchlogs = "1.75"
aws-sdk-sns = "1.73"
aws-sdk-sqs = "1.72"
aws-sdk-elasticloadbalancingv2 = "1.75"
aws-sdk-cloudformation = "1.70"
aws-sdk-secretsmanager = "1.70"
aws-sdk-ssm = "1.70"
aws-sdk-eks = "1.70"
aws-sdk-apigateway = "1.70"
aws-sdk-route53 = "1.70"
aws-sdk-elasticache = "1.70"
# Batch 1
aws-sdk-acm = "1.70"
aws-sdk-athena = "1.70"
aws-sdk-autoscaling = "1.70"
aws-sdk-backup = "1.70"
aws-sdk-batch = "1.70"
aws-sdk-budgets = "1.70"
aws-sdk-cloudfront = "1.70"
aws-sdk-cloudtrail = "1.70"
aws-sdk-codebuild = "1.70"
aws-sdk-codepipeline = "1.70"
# Batch 2
aws-sdk-cognitoidentityprovider = "1.70"
aws-sdk-config = "1.70"
aws-sdk-directconnect = "1.70"
aws-sdk-ecr = "1.70"
aws-sdk-efs = "1.70"
aws-sdk-emr = "1.70"
aws-sdk-eventbridge = "1.70"
aws-sdk-firehose = "1.70"
aws-sdk-fsx = "1.70"
aws-sdk-glue = "1.70"
# Batch 3
aws-sdk-guardduty = "1.70"
aws-sdk-inspector2 = "1.70"
aws-sdk-kinesis = "1.70"
aws-sdk-kms = "1.70"
aws-sdk-lightsail = "1.70"
aws-sdk-mediaconvert = "1.70"
aws-sdk-memorydb = "1.70"
aws-sdk-mq = "1.70"
aws-sdk-neptune = "1.70"
aws-sdk-opensearch = "1.70"
# Batch 4
aws-sdk-organizations = "1.70"
aws-sdk-redshift = "1.70"
aws-sdk-sagemaker = "1.70"
aws-sdk-sesv2 = "1.70"
aws-sdk-shield = "1.70"
aws-sdk-sfn = "1.70"
aws-sdk-storagegateway = "1.70"
aws-sdk-sts = "1.70"
aws-sdk-transfer = "1.70"
aws-sdk-wafv2 = "1.70"
# Batch 5
aws-sdk-workspaces = "1.70"
aws-sdk-xray = "1.70"
aws-sdk-apprunner = "1.70"
aws-sdk-appsync = "1.70"
aws-sdk-amplify = "1.70"
aws-sdk-bedrock = "1.70"
aws-sdk-quicksight = "1.70"
aws-sdk-datasync = "1.70"
aws-sdk-databasemigration = "1.70"
aws-sdk-elasticbeanstalk = "1.70"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Utils
anyhow = "1.0"
dirs = "6.0"
