[package]
name = "taws"
version = "1.0.1"
edition = "2024"
description = "Terminal UI for AWS - navigate, observe, and manage AWS resources"
license = "MIT"
repository = "https://github.com/huseyinbabal/taws"
homepage = "https://github.com/huseyinbabal/taws"
readme = "README.md"
keywords = ["aws", "tui", "terminal", "cloud", "infrastructure"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Huseyin Babal"]

[dependencies]
# TUI
ratatui = "0.30"
crossterm = "0.29"

# AWS (lightweight - SigV4 only, no SDK)
aws-sigv4 = "1.2"
aws-credential-types = "1.2"
aws-smithy-runtime-api = "1.2"

# HTTP client (using rustls to avoid OpenSSL cross-compilation issues)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
url = "2.5"
urlencoding = "2.1"

# Async runtime
tokio = { version = "1.49", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# XML parsing (for EC2, IAM, RDS Query protocol APIs)
quick-xml = { version = "0.37", features = ["serialize"] }

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Utils
anyhow = "1.0"
dirs = "6.0"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
